apps/backend-service-2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-2
spec:
  ports:
    - port: 80
      targetPort: 8000
      name: http
      protocol: TCP
  selector:
    app: backend-service-2
